--- a/Gantsi.html
+++ b/Gantsi.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Youth Graduate Program in Gantsi, Botswana. Empowering youth through innovation and skill development.">
+<meta name="keywords" content="Gantsi, Botswana, youth, graduates, innovation, training, development">
+<meta name="author" content="Willy Moses">
+<meta name="robots" content="index, follow">
+
     <title>Gantsi Postgraduate Registration</title>
     <!-- Font Awesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
