--- a/Gantsi.html
+++ b/Gantsi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Youth Graduate Program in Gantsi, Botswana. Empowering youth through innovation and skill development.">
+    <meta name="google-site-verification" content="hlTQtPQrDy-GsnhAObosFJE4KNS7hhAObctRjb00Mwo" />
 <meta name="keywords" content="Gantsi, Botswana, youth, graduates, innovation, training, development">
 <meta name="author" content="Willy Moses">
 <meta name="robots" content="index, follow">
@@ -1217,3 +1218,4 @@
     </script>
 </body>
 </html>
+
