--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Willy Moses">
 <meta name="robots" content="index, follow">
 
-    <title>Gantsi Postgraduate Registration</title>
+    <title>Ghanzi Youth Post-Graduate Registration</title>
     <!-- Font Awesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -1218,4 +1218,5 @@
     </script>
 </body>
 </html>
+
 
