--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Gantsi Postgraduate Database</h1>
-            <p>Registration system for unemployed postgraduates in Gantsi village</p>
+            <h1>Ghanzi Youth Post-Graduate Registration</h1>
+            <p>Registration system for unemployed postgraduates in Ghanzi Township</p>
             <div class="social-links">
                 <a href="https://facebook.com" target="_blank" class="social-link facebook" title="Facebook">
                     <i class="fab fa-facebook-f"></i>
@@ -1218,5 +1218,6 @@
     </script>
 </body>
 </html>
+
 
 
